remove background colour

--- a/somo/templates/base.html
+++ b/somo/templates/base.html
@@ -15,8 +15,7 @@
     <script src="{% static 'js/ajax.js' %}"></script>
 
 </head>
-<body style="background:url('../static/img/slide4.jpg');
-">
+<body>
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
